# faunanet_record

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  set_up_fake_sparrow.py
.github/workflows/: cd.yml  cd_test.yml  ci.yml  main.yml  publish_pypi.yml  publish_testpypi.yml  pypi_release.yml  release_testpypi.yml  test_pypyi_release.yml
config/: custom_example.yml  default.yml  install.yml
doc/source/: conf.py  faunanet_record.rst  index.rst  requirements.txt
docker/: default.yml  dockerfile  faunanet_record.dockerfile  install.yml
notebooks/: sparrow_audiosource.ipynb
scripts/: run.py
src/faunanet_record/: __init__.py  alsa_recorder.py  arecord.dockerfile  audio_recording.py  cli.py  default.yml  faunanet_record.dockerfile  install.yml  pyaudio_recorder.py  pysound_recorder.py  runner.py  set_up.py  utils.py
src/faunanet_record/docker/: faunanet_record.dockerfile
src/iSparrowRecord/: __init__.py  audio_recording.py  cli.py  dummy.py  runner.py  set_up.py  set_up_sparrow.py  utils.py
tests/: audio_recorder_test.py  cli_test.py  conftest.py  dummy_test.py  integration_test.py  runner_test.py  set_up_sparrow.py  utils_test.py
tests/test_configs/: cfg_default.yml  cfg_test.yml  default.yml  install.yml
