[project]
name = "faunanet-record"
requires-python = ">= 3.9"
authors=[{name = "Harald Mack", email = "harald.mack@iwr.uni-heidelberg.de"}, {name = "Inga Ulusoy", email = "inga.ulusoy@uni-heidelberg.de"}]
description = "Audio Recording Facilities for the isparrow package"
readme ="README.md"
license={file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording", 
    "Development Status :: 4 - Beta",

]
dynamic = ["version"]
dependencies = [
    "numpy", 
    "PyYAML", 
    "wave", 
    "pyaudio",
    "platformdirs", 
    "click"
]

[project.urls]
Repository = "https://github.com/ssciwr/iSparrowRecord"
Issues = "https://github.com/ssciwr/iSparrowRecord/issues"

[project.scripts]
faunanet_record = "faunanet_record.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest", 
    "pytest-cov",  
    "coverage", 
    "pre-commit",
    "librosa", 
]

doc = [
    "sphinx",
    "myst-parser",
    "sphinxcontrib-napoleon",
    "sphinx-rtd-theme"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# tools
[tool.setuptools.dynamic]
version = { attr = "faunanet_record.__version__" }

[tool.pytest.ini_options]
minversion = "6.0"
addopts="-v -x"
testpaths = ["tests"] 

[tool.coverage.run]
branch = true
source = ["./src/faunanet_record"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"
